<resources>
    <string name="app_name">AppleMarket</string>
    <string name="TV_ADDRESS">수원시 영통구 원천동</string>
    <string name="TV_PRICE">50,000원</string>
    <string name="TV_NAME">프라다 복조리백</string>
    <string name="tv_manner"><u>매너온도</u></string>
    <string name="btn_chat">채팅하기</string>
    <string name="tv_dprice">180,000원</string>
    <string name="tv_sdetail">판매상품 내용</string>
    <string name="tv_iname">판매상품</string>
    <string name="tv_temper">39.3°C</string>
    <string name="tv_heartnumber">25</string>
    <string name="tv_spbubble">14</string>
    <string name="tv_title">내배캠동</string>
    <string name="back_button_event">메인으로 돌아옴.</string>
</resources>