<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <androidx.cardview.widget.CardView
        android:id="@+id/CardView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="15dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_sampleimage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/shape_image"
            android:clipToOutline="true"
            android:scaleType="centerCrop"
            android:src="@drawable/sample6"/>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/TV_NAME"
        android:textColor="#424242"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/CardView"
        app:layout_constraintTop_toTopOf="@+id/CardView" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/TV_ADDRESS"
        android:textColor="#848484"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/CardView"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/TV_PRICE"
        android:textColor="@color/black"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/CardView"
        app:layout_constraintTop_toBottomOf="@+id/tv_address" />

    <TextView
        android:id="@+id/tv_spbubble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/bubble"
        android:drawablePadding="2dp"
        android:text="@string/tv_spbubble"
        android:textColor="#848484"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_heart" />

    <TextView
        android:id="@+id/tv_heart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/heart_image"
        android:drawablePadding="2dp"
        android:text="@string/tv_heartnumber"
        android:textColor="#848484"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/grayline"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#E6E6E6"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>