<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/toolbar3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_sampleitem"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/sample8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_sampleitem">

                <ImageView
                    android:id="@+id/orangeperson"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:src="@drawable/account"
                    app:layout_constraintBottom_toTopOf="@+id/grayline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/grayline"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="#E6E6E6"
                    app:layout_constraintTop_toBottomOf="@+id/orangeperson"/>


                <TextView
                    android:id="@+id/tv_sellername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="판매자 이름"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/orangeperson" />

                <TextView
                    android:id="@+id/tv_detail_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="주소"
                    android:textSize="15sp"
                    android:textColor="#6E6E6E"
                    app:layout_constraintTop_toBottomOf="@+id/tv_sellername"
                    app:layout_constraintStart_toEndOf="@+id/orangeperson"/>

                <TextView
                    android:id="@+id/tv_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/tv_temper"
                    android:textColor="#04B486"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toStartOf="@+id/iv_laugh"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_laugh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/laugh1"
                    android:layout_margin="15dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <TextView
                    android:id="@+id/manner_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/tv_manner"
                    android:textSize="13sp"
                    android:textColor="#A4A4A4"
                    app:layout_constraintTop_toBottomOf="@+id/iv_laugh"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/tv_item_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_iname"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/grayline"/>

                <TextView
                    android:id="@+id/tv_sales_details"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/tv_sdetail"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_item_name"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/left_arrow1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:src="@drawable/heart_image2" />

        <View
            android:layout_width="1px"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:background="@color/black" />

        <TextView
            android:id="@+id/tv_detailprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_dprice"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_chat"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:layout_gravity="right"
            android:text="@string/btn_chat"
            android:background="@drawable/shape_image"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"/>

    </androidx.appcompat.widget.Toolbar>

</androidx.constraintlayout.widget.ConstraintLayout>